# cube3

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  cube3
inc/: cube3.h
shaders/: fragment.glsl  vertex.glsl
src/: main.c  shaders.c
